--- a/pkg/slayers/BUILD.bazel
+++ b/pkg/slayers/BUILD.bazel
@@ -23,6 +23,7 @@ go_library(
         "//pkg/slayers/path:go_default_library",
         "//pkg/slayers/path/empty:go_default_library",
         "//pkg/slayers/path/epic:go_default_library",
+        "//pkg/slayers/path/hummingbird:go_default_library",
         "//pkg/slayers/path/onehop:go_default_library",
         "//pkg/slayers/path/scion:go_default_library",
         "@com_github_gopacket_gopacket//:go_default_library",
