--- a/pkg/snet/BUILD.bazel
+++ b/pkg/snet/BUILD.bazel
@@ -16,7 +16,9 @@ go_library(
         "snet.go",
         "sock_error_posix.go",
         "sock_error_windows.go",
+        "stun_handler.go",
         "svcaddr.go",
+        "udp_conn.go",
         "udpaddr.go",
         "writer.go",
     ],
@@ -37,6 +39,7 @@ go_library(
         "//pkg/slayers/path/epic:go_default_library",
         "//pkg/slayers/path/onehop:go_default_library",
         "//pkg/slayers/path/scion:go_default_library",
+        "//pkg/stun:go_default_library",
         "//private/topology:go_default_library",
         "//private/topology/underlay:go_default_library",
         "@com_github_gopacket_gopacket//:go_default_library",
