daemon: Refactor and modularize daemon and pkg/daemon

--- a/pkg/daemon/BUILD.bazel
+++ b/pkg/daemon/BUILD.bazel
@@ -5,16 +5,16 @@ go_library(
     name = "go_default_library",
     srcs = [
         "apitypes.go",
-        "daemon.go",
+        "connector.go",
         "grpc.go",
-        "metrics.go",
+        "grpc_metrics.go",
         "topology.go",
     ],
     importpath = "github.com/scionproto/scion/pkg/daemon",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/addr:go_default_library",
-        "//pkg/daemon/internal/metrics:go_default_library",
+        "//pkg/daemon/types:go_default_library",
         "//pkg/drkey:go_default_library",
         "//pkg/grpc:go_default_library",
         "//pkg/log:go_default_library",
