--- a/pkg/daemon/fetcher/mock_fetcher/BUILD.bazel
+++ b/pkg/daemon/fetcher/mock_fetcher/BUILD.bazel
@@ -4,14 +4,14 @@ gomock(
     name = "go_default_mock",
     out = "mock.go",
     interfaces = ["Fetcher"],
-    library = "//daemon/fetcher:go_default_library",
+    library = "//pkg/daemon/fetcher:go_default_library",
     package = "mock_fetcher",
 )
 
 go_library(
     name = "go_default_library",
     srcs = ["mock.go"],
-    importpath = "github.com/scionproto/scion/daemon/fetcher/mock_fetcher",
+    importpath = "github.com/scionproto/scion/pkg/daemon/fetcher/mock_fetcher",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/addr:go_default_library",
