--- a/daemon/cmd/daemon/BUILD.bazel
+++ b/daemon/cmd/daemon/BUILD.bazel
@@ -15,11 +15,10 @@ go_library(
     deps = [
         "//daemon:go_default_library",
         "//daemon/config:go_default_library",
-        "//daemon/drkey:go_default_library",
-        "//daemon/drkey/grpc:go_default_library",
-        "//daemon/fetcher:go_default_library",
         "//daemon/mgmtapi:go_default_library",
         "//pkg/addr:go_default_library",
+        "//pkg/daemon/fetcher:go_default_library",
+        "//pkg/daemon/private/trust:go_default_library",
         "//pkg/experimental/hiddenpath:go_default_library",
         "//pkg/experimental/hiddenpath/grpc:go_default_library",
         "//pkg/grpc:go_default_library",
@@ -27,12 +26,11 @@ go_library(
         "//pkg/metrics:go_default_library",
         "//pkg/private/prom:go_default_library",
         "//pkg/private/serrors:go_default_library",
-        "//pkg/proto/crypto:go_default_library",
         "//pkg/proto/daemon:go_default_library",
-        "//pkg/scrypto/cppki:go_default_library",
-        "//pkg/scrypto/signed:go_default_library",
         "//private/app:go_default_library",
         "//private/app/launcher:go_default_library",
+        "//private/drkey:go_default_library",
+        "//private/drkey/grpc:go_default_library",
         "//private/mgmtapi/cppki/api:go_default_library",
         "//private/mgmtapi/segments/api:go_default_library",
         "//private/pathdb:go_default_library",
