--- a/demo/stun/test-client/BUILD.bazel
+++ b/demo/stun/test-client/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     deps = [
         "//pkg/addr:go_default_library",
         "//pkg/daemon:go_default_library",
+        "//pkg/daemon/types:go_default_library",
         "//pkg/snet:go_default_library",
         "@com_tailscale//net/stun:go_default_library",
     ],
