--- a/pkg/daemon/mock_daemon/BUILD.bazel
+++ b/pkg/daemon/mock_daemon/BUILD.bazel
@@ -15,7 +15,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/addr:go_default_library",
-        "//pkg/daemon:go_default_library",
+        "//pkg/daemon/types:go_default_library",
         "//pkg/drkey:go_default_library",
         "//pkg/private/ctrl/path_mgmt:go_default_library",
         "//pkg/snet:go_default_library",
