--- a/private/drkey/grpc/BUILD.bazel
+++ b/private/drkey/grpc/BUILD.bazel
@@ -7,7 +7,7 @@ go_library(
         "fetcher.go",
         "protobuf.go",
     ],
-    importpath = "github.com/scionproto/scion/daemon/drkey/grpc",
+    importpath = "github.com/scionproto/scion/private/drkey/grpc",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/addr:go_default_library",
@@ -26,11 +26,11 @@ go_test(
     srcs = ["fetching_test.go"],
     deps = [
         ":go_default_library",
-        "//daemon/drkey:go_default_library",
         "//pkg/drkey:go_default_library",
         "//pkg/private/xtest:go_default_library",
         "//pkg/proto/control_plane:go_default_library",
         "//pkg/proto/control_plane/mock_control_plane:go_default_library",
+        "//private/drkey:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
         "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
