--- a/private/segment/verifier/BUILD.bazel
+++ b/private/segment/verifier/BUILD.bazel
@@ -2,12 +2,17 @@ load("@rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["verifier.go"],
+    srcs = [
+        "acceptall.go",
+        "verifier.go",
+    ],
     importpath = "github.com/scionproto/scion/private/segment/verifier",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/addr:go_default_library",
+        "//pkg/proto/crypto:go_default_library",
         "//pkg/scrypto/cppki:go_default_library",
+        "//pkg/scrypto/signed:go_default_library",
         "//pkg/segment:go_default_library",
     ],
 )
