--- a/tools/end2end/BUILD.bazel
+++ b/tools/end2end/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
     deps = [
         "//pkg/addr:go_default_library",
         "//pkg/daemon:go_default_library",
+        "//pkg/daemon/types:go_default_library",
         "//pkg/log:go_default_library",
         "//pkg/private/common:go_default_library",
         "//pkg/private/serrors:go_default_library",
