daemon: Move backend into pkg/daemon

--- a/daemon/cmd/daemon/BUILD.bazel
+++ b/daemon/cmd/daemon/BUILD.bazel
@@ -17,9 +17,9 @@ go_library(
         "//daemon/config:go_default_library",
         "//daemon/drkey:go_default_library",
         "//daemon/drkey/grpc:go_default_library",
-        "//daemon/fetcher:go_default_library",
         "//daemon/mgmtapi:go_default_library",
         "//pkg/addr:go_default_library",
+        "//pkg/daemon/fetcher:go_default_library",
         "//pkg/experimental/hiddenpath:go_default_library",
         "//pkg/experimental/hiddenpath/grpc:go_default_library",
         "//pkg/grpc:go_default_library",
