--- a/daemon/BUILD.bazel
+++ b/daemon/BUILD.bazel
@@ -8,10 +8,11 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//daemon/drkey:go_default_library",
-        "//daemon/fetcher:go_default_library",
         "//daemon/internal/servers:go_default_library",
         "//pkg/addr:go_default_library",
         "//pkg/daemon:go_default_library",
+        "//pkg/daemon/fetcher:go_default_library",
+        "//pkg/daemon/server:go_default_library",
         "//pkg/grpc:go_default_library",
         "//pkg/log:go_default_library",
         "//pkg/metrics:go_default_library",
