--- a/daemon/internal/servers/BUILD.bazel
+++ b/daemon/internal/servers/BUILD.bazel
@@ -2,24 +2,16 @@ load("@rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "backend.go",
-        "grpc.go",
-        "metrics.go",
-    ],
+    srcs = ["grpc.go"],
     importpath = "github.com/scionproto/scion/daemon/internal/servers",
     visibility = ["//daemon:__subpackages__"],
     deps = [
-        "//daemon/drkey:go_default_library",
-        "//daemon/fetcher:go_default_library",
         "//pkg/addr:go_default_library",
         "//pkg/daemon:go_default_library",
         "//pkg/drkey:go_default_library",
         "//pkg/log:go_default_library",
-        "//pkg/metrics:go_default_library",
         "//pkg/private/ctrl/path_mgmt:go_default_library",
         "//pkg/private/ctrl/path_mgmt/proto:go_default_library",
-        "//pkg/private/prom:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "//pkg/private/util:go_default_library",
         "//pkg/proto/daemon:go_default_library",
@@ -27,13 +19,10 @@ go_library(
         "//pkg/slices:go_default_library",
         "//pkg/snet:go_default_library",
         "//pkg/snet/path:go_default_library",
-        "//private/revcache:go_default_library",
         "//private/topology:go_default_library",
         "//private/trust:go_default_library",
-        "@com_github_opentracing_opentracing_go//:go_default_library",
         "@org_golang_google_protobuf//types/known/durationpb:go_default_library",
         "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
         "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
-        "@org_golang_x_sync//singleflight:go_default_library",
     ],
 )
