--- a/router/BUILD.bazel
+++ b/router/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     srcs = [
         "connector.go",
         "dataplane.go",
+        "dataplane_hbird.go",
         "doc.go",
         "metrics.go",
         "serialize_proxy.go",
@@ -28,6 +29,7 @@ go_library(
         "//pkg/slayers/path:go_default_library",
         "//pkg/slayers/path/empty:go_default_library",
         "//pkg/slayers/path/epic:go_default_library",
+        "//pkg/slayers/path/hummingbird:go_default_library",
         "//pkg/slayers/path/onehop:go_default_library",
         "//pkg/slayers/path/scion:go_default_library",
         "//pkg/spao:go_default_library",
@@ -38,6 +40,7 @@ go_library(
         "//router/bfd:go_default_library",
         "//router/config:go_default_library",
         "//router/control:go_default_library",
+        "//router/tokenbucket:go_default_library",
         "@com_github_gopacket_gopacket//:go_default_library",
         "@com_github_gopacket_gopacket//layers:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
