--- a/control/cmd/control/BUILD.bazel
+++ b/control/cmd/control/BUILD.bazel
@@ -37,6 +37,7 @@ go_library(
         "//control/trust/metrics:go_default_library",
         "//pkg/addr:go_default_library",
         "//pkg/connect:go_default_library",
+        "//pkg/connect/happy:go_default_library",
         "//pkg/experimental/hiddenpath:go_default_library",
         "//pkg/grpc:go_default_library",
         "//pkg/log:go_default_library",
