--- a/gateway/BUILD.bazel
+++ b/gateway/BUILD.bazel
@@ -25,6 +25,7 @@ go_library(
         "//gateway/xnet:go_default_library",
         "//pkg/addr:go_default_library",
         "//pkg/connect:go_default_library",
+        "//pkg/connect/happy:go_default_library",
         "//pkg/daemon:go_default_library",
         "//pkg/grpc:go_default_library",
         "//pkg/log:go_default_library",
@@ -37,6 +38,7 @@ go_library(
         "//pkg/snet/metrics:go_default_library",
         "//pkg/snet/squic:go_default_library",
         "//private/app/appnet:go_default_library",
+        "//private/env:go_default_library",
         "//private/periodic:go_default_library",
         "//private/service:go_default_library",
         "//private/svc:go_default_library",
