--- a/scion/cmd/scion/BUILD.bazel
+++ b/scion/cmd/scion/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
     deps = [
         "//pkg/addr:go_default_library",
         "//pkg/daemon:go_default_library",
+        "//pkg/daemon/client:go_default_library",
         "//pkg/log:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "//pkg/segment/iface:go_default_library",
