--- a/pkg/snet/BUILD.bazel
+++ b/pkg/snet/BUILD.bazel
@@ -43,6 +43,7 @@ go_library(
         "//private/topology:go_default_library",
         "//private/topology/underlay:go_default_library",
         "@com_github_gopacket_gopacket//:go_default_library",
+        "@org_golang_x_sync//errgroup:go_default_library",
     ] + select({
         "@rules_go//go/platform:windows": [
             "@org_golang_x_sys//windows:go_default_library",
