--- a/demo/stun/test-client/BUILD.bazel
+++ b/demo/stun/test-client/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "//pkg/addr:go_default_library",
         "//pkg/daemon:go_default_library",
         "//pkg/snet:go_default_library",
+        "@com_github_stretchr_testify//assert:go_default_library",
         "@com_tailscale//net/stun:go_default_library",
     ],
 )
