--- a/pkg/snet/BUILD.bazel
+++ b/pkg/snet/BUILD.bazel
@@ -16,7 +16,7 @@ go_library(
         "snet.go",
         "sock_error_posix.go",
         "sock_error_windows.go",
-        "stun_handler.go",
+        "stun_conn.go",
         "svcaddr.go",
         "udp_conn.go",
         "udpaddr.go",
@@ -43,7 +43,6 @@ go_library(
         "//private/topology:go_default_library",
         "//private/topology/underlay:go_default_library",
         "@com_github_gopacket_gopacket//:go_default_library",
-        "@org_golang_x_sync//errgroup:go_default_library",
     ] + select({
         "@rules_go//go/platform:windows": [
             "@org_golang_x_sys//windows:go_default_library",
