router: add STUN implementation (#4740)
SCION packet headers contain a SRC address to which packets should be
returned. This address needs to be visible/reachable by the first-hop
border router, assuming that the path gets simply reversed by the peer.
This address may not be easy to discover if the sender is separated from
the receiver by a NAT.

A solution was designed as described in the [design
document](https://github.com/scionproto/scion/blob/2755a60bbfe9e300abbebd9051d951345a2a2435/doc/dev/design/NAT-address-discovery.rst)
using STUN for NAT traversal. (Relevant
[discussion](https://github.com/scionproto/scion/issues/4630)).
This PR concerns changes to the border router to add functionality to
act as a STUN server. Changes include adding a new packet processor on
the UDP/IP underlay provider that processes STUN requests.

#### Testing

A new integration test has been added in `demo/stun`, which also acts as
a demonstration for how a STUN request may be sent to the border router.
The test can be run with
`bazel test --config=integration --test-output=streamed
//demo/stun:test`

---------

Co-authored-by: Marc Frei <marc.frei@gmail.com>
Co-authored-by: Jan Luan <jan.luan@outlook.de>
Co-authored-by: Jan Luan <jan@Jans-MacBook-Air.local>
Co-authored-by: Roman Sharkov <roman.scharkov@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -91,6 +91,13 @@ linters:
       - linters:
           - goheader
         path: pkg/scrypto/cms
+      - linters:
+          - goheader
+        path: pkg/stun/stun.go
+      - linters:
+          - goheader
+          - lll
+        path: pkg/stun/stun_test.go
     paths:
       - third_party$
       - builtin$
