--- a/router/underlayproviders/udpip/BUILD.bazel
+++ b/router/underlayproviders/udpip/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "//pkg/log:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "//pkg/slayers:go_default_library",
+        "//pkg/stun:go_default_library",
         "//private/underlay/conn:go_default_library",
         "//router:go_default_library",
         "//router/bfd:go_default_library",
@@ -26,7 +27,6 @@ go_test(
     embed = [":go_default_library"],
     deps = [
         "//pkg/addr:go_default_library",
-        "//pkg/private/serrors:go_default_library",
         "//pkg/private/util:go_default_library",
         "//pkg/scrypto:go_default_library",
         "//pkg/slayers:go_default_library",
