Use multiple queues (with priorities) at udp/ip underlay provider.
The udp/ip underlay provider now uses priority queues to send the
received packets. This is done by reading first all of the priority
queue, and only then reading the best-effort one.
Also, modify the layout of the Packet struct to automatically align
to 64 bytes, instead of manually adding padding (which failed for
zero padding bytes).

--- a/router/underlayproviders/udpip/BUILD.bazel
+++ b/router/underlayproviders/udpip/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
         "//private/underlay/conn:go_default_library",
         "//router:go_default_library",
         "//router/bfd:go_default_library",
+        "//router/priority:go_default_library",
     ],
 )
 
