router: add tests and fix BUILD.bazel for processing metrics
- Add metrics_processing_stub.go to BUILD.bazel srcs (fixes Bazel build)
- Add metrics_processing_stub_test.go to BUILD.bazel test srcs
- Expand test coverage for metrics_processing.go:
  - TestObserveDurationRecordsValue: verify histogram values
  - TestObserveDurationAllStages: test all stage labels
  - TestIncResultMethod: verify counter increments
  - TestIncResultAllResults: test all result labels
- Add stub tests (metrics_processing_stub_test.go):
  - TestStubProcessingMetricsDisabled
  - TestStubInitProcessingMetricsReturnsNil
  - TestStubObserveDurationNoOp
  - TestStubIncResultNoOp
  - TestStubZeroOverhead

Coverage for metrics_processing.go: 100%

Signed-off-by: jw <jw@example.com>

--- a/router/BUILD.bazel
+++ b/router/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
         "dataplane.go",
         "doc.go",
         "metrics.go",
+        "metrics_processing_stub.go",
         "serialize_proxy.go",
         "svc.go",
         "underlay.go",
@@ -51,6 +52,7 @@ go_test(
         "dataplane_internal_test.go",
         "dataplane_test.go",
         "export_test.go",
+        "metrics_processing_stub_test.go",
         "svc_test.go",
         "underlay_import_test.go",
     ],
