--- a/acceptance/stun/test-client/BUILD.bazel
+++ b/acceptance/stun/test-client/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//pkg/daemon:go_default_library",
+        "//pkg/daemon/types:go_default_library",
         "//pkg/snet:go_default_library",
     ],
 )
