snet: implement STUN for NAT traversal (#4863)
### Background

SCION packet headers contain a SRC address to which packets should be
returned. This address needs to be visible/reachable by the first-hop
border router, assuming that the path gets simply reversed by the peer.
This address may not be easy to discover if the sender is separated from
the receiver by a NAT.

A solution has been designed that uses STUN for NAT traversal, allowing
clients behind NATs to query the first-hop border router to obtain their
external mapped address. This external address can then be used as the
SRC address in the SCION header. The relevant design document can be
found
[here](https://docs.scion.org/en/latest/dev/design/NAT-address-discovery.html).
The implementation of a STUN server at the border router has been done
[here](https://github.com/scionproto/scion/pull/4740). This PR and its
implementation details were originally discussed
[here](https://github.com/jdslab/scion/pull/2)

### Summary of Changes

The present PR concerns the client side implementation of the NAT
travelsal mechanism in the snet library. Modifications involve adding a
configurable option to `SCIONNetwork` that enables transparent NAT
traversal. If enabled, SCION connections obtained by `SCIONNetwork.Dial`
will automatically query the first-hop border router for the external
address using a STUN request. The external address is then used as the
clients SRC address instead of its local address when sending packets.

The STUN mechanism is implemented compliant with
[RFC8489](https://www.rfc-editor.org/rfc/rfc8489), which includes
retransmissions on timeouts. Changes to the behavior of the SCION
connection's methods are kept to a minimum. Specifically, the `ReadFrom`
and `WriteTo` methods closely mimick the behavior of `net.UDPconn`. The
STUN mechanism happens in the background and is transparent towards
client applications.

In summary, the changes in this PR allow client applications to connect
to the SCION in

--- a/pkg/snet/BUILD.bazel
+++ b/pkg/snet/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "snet.go",
         "sock_error_posix.go",
         "sock_error_windows.go",
+        "stun_conn.go",
         "svcaddr.go",
         "udpaddr.go",
         "writer.go",
@@ -37,9 +38,11 @@ go_library(
         "//pkg/slayers/path/epic:go_default_library",
         "//pkg/slayers/path/onehop:go_default_library",
         "//pkg/slayers/path/scion:go_default_library",
+        "//pkg/stun:go_default_library",
         "//private/topology:go_default_library",
         "//private/topology/underlay:go_default_library",
         "@com_github_gopacket_gopacket//:go_default_library",
+        "@org_golang_x_sync//singleflight:go_default_library",
     ] + select({
         "@rules_go//go/platform:windows": [
             "@org_golang_x_sys//windows:go_default_library",
