--- a/private/underlay/ebpf/BUILD.bazel
+++ b/private/underlay/ebpf/BUILD.bazel
@@ -75,10 +75,57 @@ go_library(
         "sockfilter_bpfel.go",
         "sockfilter_lint.go",  # keep
     ],
-    embedsrcs = [
-        "sockfilter_bpfel.o",  #keep
-        "kfilter_bpfel.o",  #keep
-    ],
+    embedsrcs = select({
+        "@rules_go//go/platform:android_386": [
+            "kfilter_bpfel.o",
+            "sockfilter_bpfel.o",
+        ],
+        "@rules_go//go/platform:android_amd64": [
+            "kfilter_bpfel.o",
+            "sockfilter_bpfel.o",
+        ],
+        "@rules_go//go/platform:android_arm": [
+            "kfilter_bpfel.o",
+            "sockfilter_bpfel.o",
+        ],
+        "@rules_go//go/platform:android_arm64": [
+            "kfilter_bpfel.o",
+            "sockfilter_bpfel.o",
+        ],
+        "@rules_go//go/platform:linux_386": [
+            "kfilter_bpfel.o",
+            "sockfilter_bpfel.o",
+        ],
+        "@rules_go//go/platform:linux_amd64": [
+            "kfilter_bpfel.o",
+            "sockfilter_bpfel.o",
+        ],
+        "@rules_go//go/platform:linux_arm": [
+            "kfilter_bpfel.o",
+            "sockfilter_bpfel.o",
+        ],
+        "@rules_go//go/platform:linux_arm64": [
+            "kfilter_bpfel.o",
+            "sockfilter_bpfel.o",
+        ],
+        "@rules_go//go/platform:linux_mips64le": [
+            "kfilter_bpfel.o",
+            "sockfilter_bpfel.o",
+        ],
+        "@rules_go//go/platform:linux_mipsle": [
+            "kfilter_bpfel.o",
+            "sockfilter_bpfel.o",
+        ],
+        "@rules_go//go/platform:linux_ppc64le": [
+            "kfilter_bpfel.o",
+            "sockfilter_bpfel.o",
+        ],
+        "@rules_go//go/platform:linux_riscv64": [
+            "kfilter_bpfel.o",
+            "sockfilter_bpfel.o",
+        ],
+        "//conditions:default": [],
+    }),
     importpath = "github.com/scionproto/scion/private/underlay/ebpf",
     visibility = ["//visibility:public"],
     deps = [
