fix: ARP resolution
refactor: Remove AF_PACKET underlay

--- a/acceptance/router_benchmark/conf/router.toml
+++ b/acceptance/router_benchmark/conf/router.toml
@@ -7,6 +7,9 @@ prometheus = "10.123.10.1:30442"
 
 [features]
 
+[router]
+preferred_underlays = { udpip = "afxdp" }
+
 [router.bfd]
 disable = true
 
