--- a/acceptance/router_multi/conf/router_nobfd.toml
+++ b/acceptance/router_multi/conf/router_nobfd.toml
@@ -5,6 +5,9 @@
 [features]
   experimental_scmp_authentication = true
 
+[router]
+  preferred_underlays = { udpip = "afxdp" }
+
 [router.bfd]
   disable = true
 
