--- a/acceptance/router_multi/conf/router.toml
+++ b/acceptance/router_multi/conf/router.toml
@@ -5,5 +5,8 @@
 [features]
   experimental_scmp_authentication = true
 
+[router]
+  preferred_underlays = { udpip = "afxdp" }
+
 [log.console]
   level = "debug"
