--- a/router/underlayproviders/afxdpudpip/BUILD.bazel
+++ b/router/underlayproviders/afxdpudpip/BUILD.bazel
@@ -6,20 +6,20 @@ go_library(
     srcs = [
         "afxdpudpip.go",
         "headers.go",
-        "internallink.go",
+        "internal_link.go",
         "neighbors.go",
         "options.go",
-        "ptplink.go",
-        "udpconnection.go",
+        "ptp_link.go",
+        "udp_connection.go",
     ],
     importpath = "github.com/scionproto/scion/router/underlayproviders/afxdpudpip",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/log:go_default_library",
         "//pkg/private/serrors:go_default_library",
     ] + select({
         "@rules_go//go/platform:android": [
             "//pkg/addr:go_default_library",
-            "//pkg/log:go_default_library",
             "//pkg/slayers:go_default_library",
             "//private/underlay/afxdp:go_default_library",
             "//private/underlay/conn:go_default_library",
@@ -30,7 +30,6 @@ go_library(
         ],
         "@rules_go//go/platform:linux": [
             "//pkg/addr:go_default_library",
-            "//pkg/log:go_default_library",
             "//pkg/slayers:go_default_library",
             "//private/underlay/afxdp:go_default_library",
             "//private/underlay/conn:go_default_library",
