--- a/private/segment/segfetcher/BUILD.bazel
+++ b/private/segment/segfetcher/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
     deps = [
         "//pkg/addr:go_default_library",
         "//pkg/log:go_default_library",
+        "//pkg/metrics/v2:go_default_library",
         "//pkg/private/prom:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "//pkg/segment:go_default_library",
@@ -29,11 +30,11 @@ go_library(
         "//private/pathdb:go_default_library",
         "//private/pathdb/query:go_default_library",
         "//private/revcache:go_default_library",
-        "//private/segment/segfetcher/internal/metrics:go_default_library",
         "//private/segment/seghandler:go_default_library",
         "//private/tracing:go_default_library",
         "//private/trust:go_default_library",
         "@com_github_opentracing_opentracing_go//:go_default_library",
+        "@com_github_prometheus_client_golang//prometheus:go_default_library",
     ],
 )
 
