more cleanup & task metrics

--- a/control/BUILD.bazel
+++ b/control/BUILD.bazel
@@ -43,7 +43,6 @@ go_library(
         "//pkg/snet/metrics:go_default_library",
         "//private/ca/renewal:go_default_library",
         "//private/config:go_default_library",
-        "//private/discovery:go_default_library",
         "//private/env:go_default_library",
         "//private/keyconf:go_default_library",
         "//private/pathdb:go_default_library",
@@ -75,6 +74,7 @@ go_test(
         "//control/beacon/mock_beacon:go_default_library",
         "//control/beaconing:go_default_library",
         "//control/segreg:go_default_library",
+        "//control/trust:go_default_library",
         "//pkg/addr:go_default_library",
         "//pkg/log:go_default_library",
         "//pkg/private/xtest:go_default_library",
