--- a/control/trust/BUILD.bazel
+++ b/control/trust/BUILD.bazel
@@ -13,12 +13,13 @@ go_library(
     importpath = "github.com/scionproto/scion/control/trust",
     visibility = ["//visibility:public"],
     deps = [
-        "//control/trust/metrics:go_default_library",
         "//pkg/log:go_default_library",
+        "//pkg/metrics/v2:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "//pkg/proto/crypto:go_default_library",
         "//pkg/scrypto/cppki:go_default_library",
         "//private/trust:go_default_library",
+        "@com_github_prometheus_client_golang//prometheus:go_default_library",
     ],
 )
 
