--- a/router/underlayproviders/afxdpudpip/BUILD.bazel
+++ b/router/underlayproviders/afxdpudpip/BUILD.bazel
@@ -16,12 +16,12 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/private/serrors:go_default_library",
+        "//private/underlay/afxdp:go_default_library",
     ] + select({
         "@rules_go//go/platform:android": [
             "//pkg/addr:go_default_library",
             "//pkg/log:go_default_library",
             "//pkg/slayers:go_default_library",
-            "//private/underlay/afxdp:go_default_library",
             "//private/underlay/conn:go_default_library",
             "//router:go_default_library",
             "//router/bfd:go_default_library",
@@ -32,7 +32,6 @@ go_library(
             "//pkg/addr:go_default_library",
             "//pkg/log:go_default_library",
             "//pkg/slayers:go_default_library",
-            "//private/underlay/afxdp:go_default_library",
             "//private/underlay/conn:go_default_library",
             "//router:go_default_library",
             "//router/bfd:go_default_library",
@@ -48,6 +47,7 @@ go_test(
     srcs = ["options_test.go"],
     embed = [":go_default_library"],
     deps = [
+        "//pkg/private/ptr:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
     ],
