--- a/.github/workflows/gobra.yml
+++ b/.github/workflows/gobra.yml
@@ -11,16 +11,16 @@ jobs:
       statsFile: '/gobra/stats.json'
     steps:
       - name: Checkout the SCION repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v6
       - name: Set-up caching for the verification results
-        uses: actions/cache@v3
+        uses: actions/cache@v5
         env:
           cache-name: gobra-cache
         with:
           path: ${{ runner.workspace }}/.gobra/cache.json
           key: ${{ env.cache-name }}
       - name: Verify the specified files
-        uses: viperproject/gobra-action@v22.10.2
+        uses: viperproject/gobra-action@v25.09.1
         with:
           # Prefix used to resolve SCION packages
           module: 'github.com/scionproto/scion/'
@@ -31,9 +31,12 @@ jobs:
           recursive: '1'
           timeout: 10m
           caching: '1'
+          # Explicitly set to preserve previous behavior; the default
+          # changed from VSWITHSILICON to SILICON in gobra-action v25.09.
+          viperBackend: 'VSWITHSILICON'
           statsFile: ${{ env.statsFile }}
       - name: Upload the verification report
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: verification_stats.json
           path: ${{ env.statsFile }}
