ci: fix gobra in github actions (#4886)
Upgrade Gobra workflow to fix cgroup v2 crash.

The gobra-action v22.10.2 ships with OpenJDK 11 that suffers a [known
cgroup v2 bug](https://bugs.openjdk.org/browse/JDK-8287073)
that causes a NullPointerException (see
[here](https://github.com/scionproto/scion/actions/runs/22069735394/job/63770840537#step:5:119))
on newer GitHub Actions runners.
Upgrade to v25.09.1 which includes a fixed JDK.

Also bump actions/checkout to v6, actions/cache to v5

Related PR to fix the warning:
https://github.com/viperproject/gobra-action/pull/35

--- a/.github/workflows/gobra.yml
+++ b/.github/workflows/gobra.yml
@@ -11,16 +11,16 @@ jobs:
       statsFile: '/gobra/stats.json'
     steps:
       - name: Checkout the SCION repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v6
       - name: Set-up caching for the verification results
-        uses: actions/cache@v3
+        uses: actions/cache@v5
         env:
           cache-name: gobra-cache
         with:
           path: ${{ runner.workspace }}/.gobra/cache.json
           key: ${{ env.cache-name }}
       - name: Verify the specified files
-        uses: viperproject/gobra-action@v22.10.2
+        uses: viperproject/gobra-action@v25.09.1
         with:
           # Prefix used to resolve SCION packages
           module: 'github.com/scionproto/scion/'
@@ -31,9 +31,14 @@ jobs:
           recursive: '1'
           timeout: 10m
           caching: '1'
+          # Work around JDK cgroup v2 NullPointerException on GitHub Actions
+          # runners by disabling container support detection. The extra flag
+          # is injected via javaXss because the action has no dedicated input
+          # for arbitrary JVM flags.
+          javaXss: '128m -XX:-UseContainerSupport'
           statsFile: ${{ env.statsFile }}
       - name: Upload the verification report
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: verification_stats.json
           path: ${{ env.statsFile }}
