--- a/router/underlayproviders/afxdpudpip/BUILD.bazel
+++ b/router/underlayproviders/afxdpudpip/BUILD.bazel
@@ -14,24 +14,49 @@ go_library(
     ],
     importpath = "github.com/scionproto/scion/router/underlayproviders/afxdpudpip",
     visibility = ["//visibility:public"],
-    deps = [
-        "//pkg/private/serrors:go_default_library",
-        "//private/underlay/afxdp:go_default_library",
-    ] + select({
-        "@rules_go//go/platform:android": [
+    deps = select({
+        "@rules_go//go/platform:android_amd64": [
             "//pkg/addr:go_default_library",
             "//pkg/log:go_default_library",
+            "//pkg/private/serrors:go_default_library",
             "//pkg/slayers:go_default_library",
+            "//private/underlay/afxdp:go_default_library",
             "//private/underlay/conn:go_default_library",
             "//router:go_default_library",
             "//router/bfd:go_default_library",
             "@com_github_vishvananda_netlink//:go_default_library",
             "@org_golang_x_sys//unix:go_default_library",
         ],
-        "@rules_go//go/platform:linux": [
+        "@rules_go//go/platform:android_arm64": [
             "//pkg/addr:go_default_library",
             "//pkg/log:go_default_library",
+            "//pkg/private/serrors:go_default_library",
             "//pkg/slayers:go_default_library",
+            "//private/underlay/afxdp:go_default_library",
+            "//private/underlay/conn:go_default_library",
+            "//router:go_default_library",
+            "//router/bfd:go_default_library",
+            "@com_github_vishvananda_netlink//:go_default_library",
+            "@org_golang_x_sys//unix:go_default_library",
+        ],
+        "@rules_go//go/platform:linux_amd64": [
+            "//pkg/addr:go_default_library",
+            "//pkg/log:go_default_library",
+            "//pkg/private/serrors:go_default_library",
+            "//pkg/slayers:go_default_library",
+            "//private/underlay/afxdp:go_default_library",
+            "//private/underlay/conn:go_default_library",
+            "//router:go_default_library",
+            "//router/bfd:go_default_library",
+            "@com_github_vishvananda_netlink//:go_default_library",
+            "@org_golang_x_sys//unix:go_default_library",
+        ],
+        "@rules_go//go/platform:linux_arm64": [
+            "//pkg/addr:go_default_library",
+            "//pkg/log:go_default_library",
+            "//pkg/private/serrors:go_default_library",
+            "//pkg/slayers:go_default_library",
+            "//private/underlay/afxdp:go_default_library",
             "//private/underlay/conn:go_default_library",
             "//router:go_default_library",
             "//router/bfd:go_default_library",
@@ -46,9 +71,27 @@ go_test(
     name = "go_default_test",
     srcs = ["options_test.go"],
     embed = [":go_default_library"],
-    deps = [
-        "//pkg/private/ptr:go_default_library",
-        "@com_github_stretchr_testify//assert:go_default_library",
-        "@com_github_stretchr_testify//require:go_default_library",
-    ],
+    deps = select({
+        "@rules_go//go/platform:android_amd64": [
+            "//pkg/private/ptr:go_default_library",
+            "@com_github_stretchr_testify//assert:go_default_library",
+            "@com_github_stretchr_testify//require:go_default_library",
+        ],
+        "@rules_go//go/platform:android_arm64": [
+            "//pkg/private/ptr:go_default_library",
+            "@com_github_stretchr_testify//assert:go_default_library",
+            "@com_github_stretchr_testify//require:go_default_library",
+        ],
+        "@rules_go//go/platform:linux_amd64": [
+            "//pkg/private/ptr:go_default_library",
+            "@com_github_stretchr_testify//assert:go_default_library",
+            "@com_github_stretchr_testify//require:go_default_library",
+        ],
+        "@rules_go//go/platform:linux_arm64": [
+            "//pkg/private/ptr:go_default_library",
+            "@com_github_stretchr_testify//assert:go_default_library",
+            "@com_github_stretchr_testify//require:go_default_library",
+        ],
+        "//conditions:default": [],
+    }),
 )
