--- a/private/underlay/ebpf/BUILD.bazel
+++ b/private/underlay/ebpf/BUILD.bazel
@@ -40,7 +40,6 @@ go_library(
         "bpf_helpers.h",
         "portfilter.go",
         "sockfilter_bpfel.go",
-        "sockfilter_lint.go",  # keep
     ],
     embedsrcs = select({
         "@rules_go//go/platform:android_386": [
@@ -83,9 +82,45 @@ go_library(
     }),
     importpath = "github.com/scionproto/scion/private/underlay/ebpf",
     visibility = ["//visibility:public"],
-    deps = [
-        "@com_github_cilium_ebpf//:go_default_library",
-    ],
+    deps = select({
+        "@rules_go//go/platform:android_386": [
+            "@com_github_cilium_ebpf//:go_default_library",
+        ],
+        "@rules_go//go/platform:android_amd64": [
+            "@com_github_cilium_ebpf//:go_default_library",
+        ],
+        "@rules_go//go/platform:android_arm": [
+            "@com_github_cilium_ebpf//:go_default_library",
+        ],
+        "@rules_go//go/platform:android_arm64": [
+            "@com_github_cilium_ebpf//:go_default_library",
+        ],
+        "@rules_go//go/platform:linux_386": [
+            "@com_github_cilium_ebpf//:go_default_library",
+        ],
+        "@rules_go//go/platform:linux_amd64": [
+            "@com_github_cilium_ebpf//:go_default_library",
+        ],
+        "@rules_go//go/platform:linux_arm": [
+            "@com_github_cilium_ebpf//:go_default_library",
+        ],
+        "@rules_go//go/platform:linux_arm64": [
+            "@com_github_cilium_ebpf//:go_default_library",
+        ],
+        "@rules_go//go/platform:linux_mips64le": [
+            "@com_github_cilium_ebpf//:go_default_library",
+        ],
+        "@rules_go//go/platform:linux_mipsle": [
+            "@com_github_cilium_ebpf//:go_default_library",
+        ],
+        "@rules_go//go/platform:linux_ppc64le": [
+            "@com_github_cilium_ebpf//:go_default_library",
+        ],
+        "@rules_go//go/platform:linux_riscv64": [
+            "@com_github_cilium_ebpf//:go_default_library",
+        ],
+        "//conditions:default": [],
+    }),
 )
 
 # Builds the portfilter test; but it will be missing the required capabilities; so we must not
