fix: E2E test parity for both underlays
Force inet for loopback topologies since XDP
cannot attach to lo. Add scion_integration and
failing-links tests to Docker E2E so both
underlays get identical test coverage.

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -161,7 +161,7 @@ steps:
       timeout_in_minutes: 15
       key: e2e_revocation_test_v2
       retry: *automatic-retry
-    - label: "E2E: default :docker: (ping)"
+    - label: "E2E: default :docker: (scion, ping)"
       command:
         - echo "--- build"
         - make build-dev docker-images
@@ -171,9 +171,27 @@ steps:
         - tools/await-connectivity
         - sleep 5
         - echo "--- run tests"
+        - ./bin/scion_integration -d || ( echo "^^^ +++" && false )
         - ./bin/end2end_integration -d || ( echo "^^^ +++" && false )
       plugins: *scion-run-hooks
       artifact_paths: *scion-run-artifact-paths
-      timeout_in_minutes: 15
+      timeout_in_minutes: 20
       key: docker_integration_e2e_default
+      retry: *automatic-retry
+    - label: "E2E: failing links :docker:"
+      command:
+        - echo "--- build"
+        - make build-dev docker-images
+        - echo "--- start topology"
+        - ./scion.sh topology -d -c topology/default-no-peers.topo
+        - ./scion.sh run
+        - tools/await-connectivity
+        - sleep 5
+        - echo "--- run tests"
+        - ./bin/end2end_integration -d || ( echo "^^^ +++" && false )
+        - ./tools/integration/revocation_test.sh
+      plugins: *scion-run-hooks
+      artifact_paths: *scion-run-artifact-paths
+      timeout_in_minutes: 15
+      key: docker_integration_e2e_failing_links
       retry: *automatic-retry
